# media

./: .gitignore  README.md  info  web_res.txt
ExoPlayer/app/: build.gradle
ExoPlayer/app/src/main/: AndroidManifest.xml
ExoPlayer/app/src/main/res/layout/: activity_exo_player.xml
ExoPlayer/app/src/main/res/menu/: navigation.xml
ExoPlayer/app/src/main/res/values/: caemra_strings.xml  styles.xml
Live/app/: build.gradle
Live/app/cpp/: CMakeLists.txt
Live/app/cpp/codec/: FileOpenAsset.cpp  FileOpenAsset.h  OpenMaxAL.cpp
Live/app/cpp/filament/: Engine.cpp  Filament.cpp
Live/app/cpp/filament/jni/: Engine.cpp
Live/app/src/main/: AndroidManifest.xml
Live/app/src/main/res/drawable/: bg_pressed_exit_fading.xml  bg_text_on_preview.xml  button_background_pressed_light.xml  ic_capture_camera.xml  ic_capture_panorama.xml  ic_grid_off.xml  ic_grid_on.xml  ic_hdr_off.xml  ic_hdr_on.xml  ic_hdr_plus_off.xml  ic_hdr_plus_on.xml  ic_options.xml  ic_switch_camera_back.xml  ic_switch_camera_front.xml  ic_timer_10s.xml  ic_timer_3s.xml  ic_timer_off.xml  primary_text.xml  settings_gear_background_pressed.xml  shutter_button_background_still.xml
Live/app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_openmax_al.xml  camera.xml  mode_list_layout.xml
Live/app/src/main/res/menu/: filmstrip_menu.xml  navigation.xml
Live/app/src/main/res/values/: camera_arrays.xml  camera_colors.xml  camera_dimens.xml  camera_strings.xml  camera_styles.xml  strings.xml  styles.xml
Media/app/: build.gradle
Media/app/src/main/: AndroidManifest.xml
Media/app/src/main/res/layout/: activity_media.xml
Media/app/src/main/res/menu/: navigation.xml
Media/app/src/main/res/values/: strings.xml
MockTest/app/: build.gradle
MockTest/app/src/main/: AndroidManifest.xml
MockTest/app/src/main/res/layout/: activity_main.xml
MockTest/app/src/main/res/menu/: menu_main.xml
MockTest/app/src/main/res/values/: strings.xml
abandon/app/: build.gradle
abandon/app/src/main/res/layout/: activity_videoview.xml
abandon/app/src/main/res/values/: colors.xml  strings.xml
app/: build.gradle
app/src/cpp/: CMakeLists.txt
app/src/cpp/codec/: WavReader.cpp  WavReader.h
app/src/cpp/codec/aac_fdk/: CMakeLists.txt
app/src/cpp/codec/aac_fdk/libAACdec/src/arm/: block_arm.cpp
app/src/cpp/codec/aac_fdk/test/: aac_enc.c  wav_reader.c
app/src/cpp/concurrency/: CMakeLists.txt  DaemonProcess.cpp  LaunchingThread.cpp  RAIIIdiom.cpp  SimpleHello.cpp  WaitingThread.cpp  asynchronous_task_with_future.cpp  boost_shared_mutex.cpp  deadlock_solution.cpp  extracting_push_pop.cpp  fleshed_out_class_stack.cpp  flexible_unique_lock.cpp  hello_concurrent_world.cpp  launching_a_thread.cpp  lazy_initialization_use_call_once.cpp  lazy_initialization_using_mutex.cpp  lock_hierarchy_prevent_dealock.cpp  locking_appropriate_granularity.cpp  packaged_task_gui_thread.cpp  parallel_version_of_accumulate.cpp  partial_packaged_task.cpp  passing_argument_with_async.cpp  promises_multiple_connections.cpp  protecting_list_with_mutex.cpp  queue_definition_condition_variable.cpp  queue_interface.cpp  reference_to_protected_data.cpp  return_thread_from_a_function.cpp  running_threads_in_the_background.cpp  scoped_thread.cpp  sequential_quicksort.cpp  simple_hierarchical_mutex.cpp  spawn_some_thread_and_wait_to_finish.cpp  stack_container_adapter.cpp  thread_safe_queue.cpp  thread_safe_stack.cpp  timeout_waiting_condition.cpp  wait_for_a_thread_to_complete.cpp  waiting_in_exceptional_circumstances.cpp  waiting_other_condition.cpp
app/src/cpp/ffmpeg/: CMakeLists.txt  configure.sh  readme
app/src/cpp/ffmpeg/libavutil/: ffversion.h
app/src/cpp/ffmpeg/tests/: avio_reading.c  decode_audio.c  function.h  metadata.c  metadata.cpp  seek.c  seek_test.cpp
app/src/cpp/glm/: CMakeLists.txt
app/src/cpp/ndk/: AndroidFopen.cpp  AndroidFopen.h  GLES3JNI.cpp  GLES3JNI.h  GLES3Renderer.cpp  JNICallback.cpp  Looper.cpp  Looper.h  NativeActivity.cpp  NativeAudio.cpp  NativeCodec.cpp  OpenMaxMedia.cpp  Plasma.cpp  TeapotActivity.cpp  TeapotRenderer.cpp  TeapotRenderer.h
app/src/cpp/ndk/faudio/: FastAudioJNI.cpp
app/src/cpp/ndk/tunnel/: android_main.cpp  common.hpp  native_engine.cpp  native_engine.hpp
app/src/cpp/opengl/: SimpleCube.cpp
app/src/cpp/sonic/: Sonic.cpp  Sonic.h  SonicJni.cpp
app/src/cpp/test/: GlmTest.cpp
app/src/main/: AndroidManifest.xml
app/src/main/assets/html/: computer_system.html  concurrency_cpp.html  concurrency_java.html  design_patterns.html  exoplayer.html  ffmpeg.html
app/src/main/res/drawable/: exo_edit_mode_logo.xml  ic_background.xml  ic_favorite_selected.xml  ic_lyric_unselected.xml  ic_normal.xml  ic_random.xml
app/src/main/res/layout/: activity_audio_fast.xml  activity_audio_native.xml  activity_callback_jni.xml  activity_camera_capture.xml  activity_capture_continuous.xml  activity_codec_native.xml  activity_color_bar.xml  activity_concurrency.xml  activity_decode_double.xml  activity_fbo_record.xml  activity_gles_info.xml  activity_grafika.xml  activity_hardware_scaler.xml  activity_max_open.xml  activity_media_multi.xml  activity_play_movie_surface.xml  activity_player_exo.xml  activity_player_simple.xml  activity_record_screen.xml  activity_sonic.xml  activity_surface_multi.xml  activity_swap_scheduled.xml  activity_tasks.xml  activity_texture_play.xml  activity_texture_view_canvas.xml  activity_texture_view_gl.xml  activity_webrtc.xml  audio_player_body.xml  dialog_info.xml  exo_playback_control_view.xml  exo_player_control_view.xml  exo_simple_player_view.xml  image_button_fast_rewind.xml  image_button_pause.xml  image_button_play.xml  image_button_record.xml  image_button_replay.xml  image_button_stop.xml  list_view_test.xml  nav_header.xml  (+7 more)
app/src/main/res/menu/: concurrency_action.xml  menu_main.xml  mvp_drawer_actions.xml
app/src/main/res/values/: colors.xml  dimens.xml  drawables.xml  exo_attrs.xml  exo_strings.xml  ids.xml  music.xml  strings.xml  styles.xml
app/src/main/res/xml/: webrtc_pref.xml
media/: media.txt
(+567 files in other folders)
